# combase

./: .gitignore  CMakeLists.txt  ChangeLog  NEWS  README  combase-config.cmake.in  combase-config.in  combase.m4.in  combase.pc.in  combase.spec  index.html
combase/: CMakeLists.txt  combase.hpp  combase_basic_types.hpp  combase_date_time_types.hpp  combase_db.hpp  combase_exceptions.hpp  combase_log.hpp  combase_maths_types.hpp  combase_service.hpp  combase_service_types.hpp  combase_types.hpp
combase/basic/: ServiceInitialisationType.cpp  ServiceInitialisationType.hpp
combase/batches/: combase.cpp
config/: project_config_embeddable.cmake
db/: CMakeLists.txt
doc/: CMakeLists.txt
man/: CMakeLists.txt
samples/: CMakeLists.txt
test/combase/: CMakeLists.txt  ComBase.cpp  MPBom.cpp  MPBom.hpp
